// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> renders the <Card/> with populated data 1`] = `
<div
  class="card"
>
  <img
    alt="Marvel"
    class="card__img"
    data-testid="image"
    src="undefined/detail.jpg"
  />
  <div
    class="card__overlay"
    data-testid="overlay"
  >
    <p
      class="card__title"
    >
      Title
    </p>
  </div>
</div>
`;

exports[`<Card/> renders the <Card/> without CardOverlay and CardTitle 1`] = `
<div
  class="card"
>
  <img
    alt="Marvel"
    class="card__img"
    data-testid="image"
    src="undefined/detail.jpg"
  />
</div>
`;
